# hh3-rm2k

./: .gitignore  .gitmodules  CHANGELOG.txt  LICENSE  Map0001.lmu  Map0002.lmu  Map0003.lmu  Map0004.lmu  Map0005.lmu  Map0006.lmu  Map0007.lmu  Map0008.lmu  Map0009.lmu  Map0010.lmu  Map0011.lmu  Map0012.lmu  Map0013.lmu  Map0014.lmu  Map0015.lmu  Map0016.lmu  Map0017.lmu  Map0018.lmu  Map0019.lmu  Map0020.lmu  Map0021.lmu  Map0022.lmu  Map0023.lmu  Map0024.lmu  Map0025.lmu  Map0026.lmu  Map0027.lmu  Map0028.lmu  Map0029.lmu  Map0030.lmu  Map0031.lmu  Map0032.lmu  Map0033.lmu  Map0034.lmu  Map0035.lmu  Map0036.lmu  (+971 more)
Music/: HH3 Ally.mid  HH3 Antiquity.mid  HH3 Ark.mid  HH3 Blue Traveler.mid  HH3 Bosun.mid  HH3 Bunny Hop.mid  HH3 Calm.mid  HH3 Camp.mid  HH3 Castle of Life.mid  HH3 Celine's theme.mid  HH3 Chivalry.mid  HH3 Darkling.mid  HH3 Deep.mid  HH3 Evening Star.mid  HH3 Exactly Like You.mid  HH3 Fallen.mid  HH3 Greater good.mid  HH3 How deep is the Ocean.mid  HH3 In the presence of God.mid  HH3 Jadin's Plight.mid  HH3 Kandirk.mid  HH3 Legacy of Solomon.mid  HH3 Lord Philips.mid  HH3 Mariners.mid  HH3 Ocean of Sands.mid  HH3 Predestination.mid  HH3 Preparations for War.mid  HH3 Ressurection.mid  HH3 Rest.mid  HH3 Shahazrad.mid  HH3 Spectacle.mid  HH3 Static.mid  HH3 The Contender.mid  HH3 The slums.mid  HH3 To be unseen.mid  HH3 Tranquility.mid  HH3 Underhalls.mid  HH3 bargain.mid  HH3 manduli.mid  LUF2 intro.mid
dev/: .ycm_extra_conf.py  CMakeLists.txt  README.md  backstab.xlsx  enemies.xlsx  formula.xlsx  hh3tool.sh  loot.xlsx  stats.xlsx  steal.xlsx  testing.md  todo.txt
dev/autodb/: CMakeLists.txt  Weapon.C  Weapon.H  main.C
dev/cedump/: CMakeLists.txt  dumpCe.C  main.C
dev/check/: CMakeLists.txt  Error.C  Error.H  check.H  checkCommonEvent.C  checkDatabase.C  checkEventCommands.C  checkMap.C  checkMapEvent.C  checkTreeMap.C  checkTroop.C  main.C
dev/copydb/: CMakeLists.txt  main.C
dev/copyrpg/: CMakeLists.txt  main.C
dev/docs/: formula.xlsx  levels.xlsx  loot.xlsx  stats.xlsx  timeline.xlsx
dev/easyrpg/bugs/: bugs.txt.txt
dev/evdump/: CMakeLists.txt  dumpBat.C  dumpMap.C  main.C
dev/hh3core/: Actor.H  Apply.H  CMakeLists.txt  Cmd.C  Cmd.H  CmdBuffer.C  CmdBuffer.H  Code.H  Constants.H  Exception.H  Item.H  Load.C  Load.H  Location.C  Location.H  Log.C  Log.H  MapCache.C  MapCache.H  MapUtils.H  MoveCmd.H  Span.H  Switches.H  Vars.H  Visit.C  Visit.H
dev/hh3tool/: Args.C  Args.H  CMakeLists.txt  Check.C  CheckArgs.C  CheckArgs.H  CmdLineArgs.H  EvDump.C  EvDumpArgs.C  EvDumpArgs.H  FindCall.C  FindCallArgs.C  FindCallArgs.H  FindItem.C  FindItemArgs.C  FindItemArgs.H  FindSwitch.C  FindSwitchArgs.C  FindSwitchArgs.H  FindVar.C  FindVarArgs.C  FindVarArgs.H  Grep.C  GrepArgs.C  GrepArgs.H  SearchText.C  SearchTextArgs.C  SearchTextArgs.H  Tools.C  Tools.H  TreeMap.C  TreeMapArgs.C  TreeMapArgs.H  main.C
dev/maptree/: CMakeLists.txt  main.C
dev/tests/: partyskills.md  walkdet.md
website/: download.htm  index.html  styles.css
website/info/: Celine.htm  ayen.htm  beginner.htm  classes.htm  dreyfus.htm  faq.htm  index.html  jade.htm  lenna.htm  magebook.htm  magick.htm  marx.htm  piedism.htm  priest.htm  races.htm  reform.htm  resistance.htm  rolf.htm  sirran.htm  skills.htm  sorcbook.htm  yurak.htm
website/scn/: index.htm
